alignment issue fixed

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -139,7 +139,6 @@ body {
 }
 .social {
 	padding-top: 12px;
-	word-spacing: 25px;
 }
 .social h4 > a {
 	color: #000000;
